# wasm-benchmark

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  ExperimentPlan.md  LICENSE  Makefile  README.md  docker-compose.yml  eslint.config.js  meta.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vitest.config.js
analysis/: common.py  config_parser.py  data_models.py  decision.py  plots.py  qc.py  report.md  report.py  statistics.py  validation.py
analysis/figures/: .gitkeep
builds/: checksums.txt  sizes.csv
builds/rust/: .gitkeep
builds/tinygo/: .gitkeep
configs/: bench-quick.yaml  bench.json  bench.yaml
data/reference_hashes/: json_parse.json  mandelbrot.json  matrix_mul.json
docs/: ExperimentPlan.md  ExperimentPlan_en.md  architecture_dataflow.md  command-reference.md  command-reference_en.md  component-decision-analysis.md  development-plan.md  development-todo-en.md  development-todo-zh.md  development-todo.md  development-todo_en.md  docker-setup.md  experiment-plan-en.md  experiment-plan-zh.md  experiment-plan.md  experiment-plan_en.md  git-commit-hook.md  run-quick-flow.md  run-quick-flow_en.md  statistical-decision.md  statistical-design-impl.md  statistical-design-impl_en.md  statistical-terminology.md  statistical-terminology_en.md  testing-strategy-guide.md  testing-strategy.md  testing-suite-implemen.md  timeout-configuration-guide.md  timeout-configuration.md  timeout-configuration_en.md
harness/web/: bench.config.json  bench.html  bench.js  config_loader.js  wasm_loader.js
reports/plots/: decision_summary.tpl
reports/plots/templates/: decision_summary.tpl
results/: meta.json
results/20250821-1430/: final_dataset.csv  qc_report.txt  raw_data.csv  raw_data.json
scripts/: all_in_one.sh  build_all.sh  build_config.js  build_rust.sh  build_tinygo.sh  check-deps.sh  common.sh  dev-server.js  docker-run.sh  fingerprint.sh  install-commit-hook.sh  run_bench.js  run_browser_bench.js  validate-tasks.sh  validate_all_tasks.sh  validate_cross_implementation.sh  validate_json_parse.sh  validate_mandelbrot.sh  validate_matrix_mul.sh
scripts/interfaces/: IBenchmarkOrchestrator.js  IBrowserService.js  IConfigurationService.js  ILoggingService.js  IResultsService.js
scripts/lib/: validation_common.sh
scripts/services/: BenchmarkOrchestrator.js  BrowserService.js  ConfigurationService.js  LoggingService.js  ResultsService.js
scripts/utils/: TerminalProgressUI.js
tasks/array_sort/rust/: Cargo.toml
tasks/array_sort/rust/src/: lib.rs
tasks/array_sort/tinygo/: go.mod  main.go
tasks/base64/rust/: Cargo.toml
tasks/base64/rust/src/: lib.rs
tasks/base64/tinygo/: go.mod  main.go
tasks/json_parse/rust/: Cargo.toml
tasks/json_parse/rust/src/: generator.rs  hash.rs  lib.rs  parser.rs  reference.rs  serializer.rs  types.rs
tasks/json_parse/tinygo/: cross_implementation_test.go  go.mod  main.go  main_test.go
tasks/mandelbrot/rust/: Cargo.toml
tasks/mandelbrot/rust/src/: hash.rs  lib.rs  mandelbrot.rs  reference.rs  types.rs  validation.rs
tasks/mandelbrot/tinygo/: cross_implementation_test.go  go.mod  main.go  main_test.go
tasks/matrix_mul/rust/: Cargo.toml
tasks/matrix_mul/rust/src/: generation.rs  hash.rs  lib.rs  matrix.rs  reference.rs  types.rs  validation.rs
tasks/matrix_mul/tinygo/: cross_implementation_test.go  go.mod  main.go  main_test.go
tests/: benchmark-runner.test.js  setup.js
tests/e2e/: full-benchmark.test.js
tests/integration/: cross-language.test.js  error-recovery.test.js  experiment-pipeline.test.js  parallel-execution.test.js
tests/unit/: config-parser.test.js  data-conversion.test.js  statistics.test.js
tests/utils/: browser-test-harness.js  prettify-test-results.js  server-checker.js  statistical-power.js  test-assertions.js  test-data-generator.js
