[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wasm-benchmark"
version = "1.0.0"
description = "WebAssembly Performance Analysis Tools"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Allen Wang", email = "allenincosmos@gmail.com" }]
keywords = ["webassembly", "benchmark", "performance", "rust", "tinygo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "numpy>=2.3.3",
    "matplotlib>=3.6.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = ["black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
wasm-benchmark-qc = "analysis.qc:main"
wasm-benchmark-stats = "analysis.statistics:main"
wasm-benchmark-plots = "analysis.plots:main"
wasm-benchmark-validate = "analysis.validation:main"

[tool.poetry]
package-mode = false

[tool.setuptools]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88


[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
