[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wasm-benchmark"
version = "1.0.0"
description = "WebAssembly Performance Analysis Tools"
requires-python = ">=3.11"
authors = [
  { name = "Allen Wang", email = "allenincosmos@gmail.com" }
]
keywords = ["webassembly", "benchmark", "performance", "rust", "tinygo"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Benchmark"
]
dependencies = [
  "numpy>=2.3.3",
  "matplotlib>=3.6.0",
  "scipy>=1.10.0",
  "pyyaml>=6.0.3",
  "jinja2>=3.1.0"
]

[project.scripts]
wasm-benchmark-qc = "analysis.qc:main"
wasm-benchmark-stats = "analysis.statistics:main"
wasm-benchmark-plots = "analysis.plots:main"
wasm-benchmark-validate = "analysis.validation:main"

[tool.uv]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["analysis"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
