[package]
name = "json_parse_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[dependencies]
# No external dependencies - pure hand-written implementation
# serde dependencies only for reference hash generation (development/testing)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"